# tauri-plugin-mobile-push

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
android/: build.gradle.kts  proguard-rules.pro  settings.gradle
android/src/main/java/app/tauri/mobilepush/: FCMService.kt  MobilePushPlugin.kt
guest-js/: index.ts  package-lock.json  package.json  tsconfig.json
ios/: Package.swift
ios/Sources/: MobilePushPlugin.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
