[package]
name = "tauri-plugin-mobile-push"
version = "0.1.3"
description = "Tauri v2 plugin for push notifications on iOS (APNs) and Android (FCM)"
authors = ["Yanqiang Lu"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yanqianglu/tauri-plugin-mobile-push"
edition = "2021"
rust-version = "1.77.2"
links = "tauri-plugin-mobile-push"
keywords = ["tauri", "tauri-plugin", "push-notifications", "apns", "fcm"]
categories = ["gui", "os"]

[dependencies]
tauri = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[package.metadata.tauri-plugin]
android-src = "android"
ios-src = "ios"
